View 5 best results in table, design improvements

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -51,6 +51,7 @@ a.dropdown-toggle.profile-dropdown {
 
 .top-buffer { margin-top: 20px }
 .top-buffer-10 { margin-top: 10px }
+.top-buffer-30 { margin-top: 30px }
 
 .clickableRow { cursor: pointer }
 
