--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,7 +35,7 @@
   width: auto; display:inline;
 }
 
-//@navbar-default-bg:             fade(#fff, 90%);
+@navbar-default-bg:         #fff;
 //@navbar-default-border:         fade(#000, 14%);
 @page-header-border-color:      fade(#000, 14%);
 
