--- a/app/assets/stylesheets/virtual_competitions.css
+++ b/app/assets/stylesheets/virtual_competitions.css
@@ -45,3 +45,31 @@
     font-size: 2em;
   }
 } 
+
+.vc-profile-name,
+.vc-result,
+.vc-unit {
+  letter-spacing: 1px;
+  font-weight: 200;	
+}
+
+.all-results-table {
+  margin-bottom: 0px;	
+}
+
+.hiddenRow {
+    padding: 0 !important;
+    border-top-width: 0px !important;
+}
+
+.vc-scoreboard-table > tbody > tr > td:nth-child(1) { width: 5%; }
+.vc-scoreboard-table > tbody > tr > td:nth-child(2) { width: 25%; }
+.vc-scoreboard-table > tbody > tr > td:nth-child(3) { width: 25%; }
+.vc-scoreboard-table > tbody > tr > td:nth-last-child(1) { width: 5%; }
+.vc-scoreboard-table > tbody > tr > td:nth-last-child(2) { width: 15%; }
+
+.vc-scoreboard-table tr td.hiddenRow:nth-child(1) { width: 30%; }
+
+.all-results-table tr td:nth-child(1) { width: 35.8%; }
+.all-results-table tr td:nth-last-child(2) { width: 21.5%; }
+.all-results-table tr td:nth-last-child(1) { width: 7.2%; }
