--- a/app/assets/stylesheets/tracks.css
+++ b/app/assets/stylesheets/tracks.css
@@ -56,6 +56,7 @@
 
 .avg-val, .spd-unit, .dst-unit, .time-unit {
     display: inline;
+    font-weight: 200;
 }
 
 .min-max {
@@ -81,7 +82,7 @@
 }
 
 .param {
-    margin-top: -10px;
+    margin-top: -8px;
     margin-bottom: 10px;
     color: #888;
 }
