Added sidekiq web ui

--- a/app/views/static_pages/manage.html.haml
+++ b/app/views/static_pages/manage.html.haml
@@ -1,4 +1,7 @@
 .container
+  .row.top-buffer
+    .col-sm-12
+      = link_to 'Sidekiq Monitoring', sidekiq_web_path
   .row
     .col-sm-4
       %h2= 'Костюмы'
