Refactor track from using temp file to model TrackFile

--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -71,7 +71,7 @@
                 %span.input-group-btn
                   %span.btn.btn-default.btn-file
                     Browse&hellip; 
-                    %input#track_file{name: 'track[track_file]', type: "file"}
+                    %input#track_file{name: 'track[file]', type: "file"}
 
           .form-group
             .col-sm-offset-3.col-sm-9
