Added qualification rounds and jumps, added tournament views

--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -27,4 +27,45 @@
         - if can? :edit, @tournament
           %a.btn.btn-default{href: new_tournament_match_path}= 'Add match'
       .col-sm-1
+  - if @tournament.qualification_rounds.count > 0      
+
+    -# TODO: EXTRACT
+    - qualification_results = []
+    - @tournament.tournament_competitors.each do |competitor|
+      - competitor_result = { id: competitor.id, name: competitor.name }
+      - competitor_jump_results = []
+      - @tournament.qualification_rounds.each do |q_round|
+        - q_jump = @tournament.qualification_jumps.detect do |jump|
+          - jump.qualification_round_id == q_round.id && jump.tournament_competitor_id == competitor.id 
+        - if q_jump
+          - competitor_jump_results << q_jump.result
+          - competitor_result["round_#{q_round.order}"] = q_jump.result
+      - competitor_result[:best_result] = competitor_jump_results.max
+      - qualification_results << competitor_result
+
+    - qualification_results.sort_by! { |x| -(x[:best_result] || 0) }
+
+    .row.top-buffer
+      .col-sm-12
+        %h2.light-header= 'Qualification'
+    .row
+      %table.table
+        %thead
+          %tr
+            %td
+              Rank
+            %td
+              Competitor
+            - @tournament.qualification_rounds.each do |round|
+              %td= "Round #{round.order}"
+            %td
+              Best result
+        %tbody
+          - qualification_results.each_with_index do |result, index|
+            %tr
+              %td= index + 1
+              %td= result[:name]
+              - @tournament.qualification_rounds.each do |round|
+                %td= result["round_#{round.order}"]
+              %td= result[:best_result]
 
