--- a/app/views/tournaments/new.html.haml
+++ b/app/views/tournaments/new.html.haml
@@ -1,4 +1,4 @@
-- model_class = VirtualCompGroup
+- model_class = Tournament
 .container
   .page-header
     %h1=t '.title', default: [:'helpers.titles.new', 'New %{model}'], model: model_class.model_name.human.titleize
