--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -40,7 +40,7 @@
         - if q_jump
           - competitor_jump_results << q_jump.result
           - competitor_result["round_#{q_round.order}"] = q_jump.result
-      - competitor_result[:best_result] = competitor_jump_results.max
+      - competitor_result[:best_result] = competitor_jump_results.min
       - qualification_results << competitor_result
 
     - qualification_results.sort_by! { |x| -(x[:best_result] || 0) }
