--- a/app/views/tournament_matches/index.html.erb
+++ b/app/views/tournament_matches/index.html.erb
@@ -1,27 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class='container'>
+	<p id="notice"><%= notice %></p>
 
-<h1>Listing Tournament Matches</h1>
+	<h1>Listing Tournament Matches</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Tournament round</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	<table class='table table-bordered'>
+	  <thead>
+	    <tr>
+	      <th>ID</th>
+	      <th>Tournament</th>
+	      <th>Tournament round</th>
+	      <th colspan="3"></th>
+	    </tr>
+	  </thead>
 
-  <tbody>
-    <% @tournament_matches.each do |tournament_match| %>
-      <tr>
-        <td><%= tournament_match.tournament_round_id %></td>
-        <td><%= link_to 'Show', tournament_match %></td>
-        <td><%= link_to 'Edit', edit_tournament_match_path(tournament_match) %></td>
-        <td><%= link_to 'Destroy', tournament_match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+	  <tbody>
+	    <% @tournament_matches.each do |tournament_match| %>
+	      <tr>
+		<td><%= tournament_match.id %></td>
+		<td><%= tournament_match.tournament.name %></td>
+		<td><%= tournament_match.round.order %></td>
+		<td><%= link_to 'Show', tournament_match %></td>
+		<td><%= link_to 'Edit', edit_tournament_match_path(tournament_match) %></td>
+		<td><%= link_to 'Destroy', tournament_match, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
 
-<br>
+	<br>
 
-<%= link_to 'New Tournament match', new_tournament_match_path %>
+	<%= link_to 'New Tournament match', new_tournament_match_path %>
+</div>
