--- a/app/views/tournament_matches/show.html.erb
+++ b/app/views/tournament_matches/show.html.erb
@@ -1,9 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class='container'>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Tournament round:</strong>
-  <%= @tournament_match.tournament_round_id %>
-</p>
+  <p>
+    <strong>Tournament round:</strong>
+    <%= @tournament_match.tournament_round_id %>
+  </p>
 
-<%= link_to 'Edit', edit_tournament_match_path(@tournament_match) %> |
-<%= link_to 'Back', tournament_matches_path %>
+  <p>
+    <strong>Start time:</strong>
+    <% if @tournament_match.start_time %>
+	    <%= @tournament_match.start_time.strftime('%Y-%m-%d %l:%M:%S.%L') %>
+    <% end %>
+  </p>
+
+
+  <%= link_to 'Edit', edit_tournament_match_path(@tournament_match) %> |
+  <%= link_to 'Back', tournament_matches_path %>
+</div>
