--- a/app/views/tournament_matches/_form.html.erb
+++ b/app/views/tournament_matches/_form.html.erb
@@ -21,6 +21,16 @@
     <%= f.text_field :start_time, class: 'form-control' %>
   </div>
 
+  <div class="field">
+    <%= f.label :gold_finals %><br>
+    <%= f.check_box :gold_finals %>
+  </div>
+
+   <div class="field">
+    <%= f.label :bronze_finals %><br>
+    <%= f.check_box :bronze_finals %>
+  </div>
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
