Added medals and disqualification notes

--- a/app/views/tournament_match_competitors/_form.html.erb
+++ b/app/views/tournament_match_competitors/_form.html.erb
@@ -49,7 +49,12 @@
     <%= f.label :notes %><br>
     <%= f.text_field :notes %>
   </div>
-  
+
+  <div class="field">
+    <%= f.label :earn_medal %><br>
+    <%= f.text_field :earn_medal %>
+  </div>
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
