--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -1,3 +1,5 @@
+- provide :title, @tournament.name
+
 .container
   %h1.light-header 
     = @tournament.name
@@ -32,13 +34,23 @@
                           %i.fa.fa-fw.fa-certificate{class: competitor.earn_medal}
                         - else
                           %i.fa.fa-fw
-                      = competitor.tournament_competitor.name
+                      %a{href: user_profile_path(competitor.tournament_competitor.user_profile_id)}
+                        = competitor.tournament_competitor.name
                     .col-sm-3.text-right
-                      - if competitor.is_disqualified
-                        %s{data: {toggle: 'tooltip'}, title: competitor.notes}
-                          = competitor.result
+                      - if competitor.track_id
+                        %a{href: track_path(competitor.track_id), data: {toggle: 'tooltip'}, title: competitor.notes}
+                          - if competitor.is_disqualified
+                            %s
+                              = competitor.result
+                          - else
+                            = competitor.result
                       - else
-                        = competitor.result
+                        - if competitor.is_disqualified
+                          %s
+                            = competitor.result
+                        - else
+                          = competitor.result
+
                 - if match.tournament_match_competitors.count == 1
                   .tournament-competitor.row
                     .col-sm-9.text-left.text-muted
@@ -47,48 +59,48 @@
           - unless match.gold_finals
             - spacers.times do
               .tournament-spacer
-        - if can? :edit, @tournament
-          %a.btn.btn-default{href: new_tournament_match_path}= 'Add match'
 
 .container
   - if @tournament.qualification_rounds.count > 0      
-
-    -# TODO: EXTRACT
-    - qualification_results = []
-    - @tournament.tournament_competitors.each do |competitor|
-      - competitor_result = { id: competitor.id, name: competitor.name }
-      - competitor_jump_results = []
-      - @tournament.qualification_rounds.each do |q_round|
-        - q_jump = @tournament.qualification_jumps.detect do |jump|
-          - jump.qualification_round_id == q_round.id && jump.tournament_competitor_id == competitor.id 
-        - if q_jump
-          - competitor_jump_results << q_jump.result
-          - competitor_result["round_#{q_round.order}"] = q_jump.result
-      - competitor_result[:best_result] = competitor_jump_results.min
-      - qualification_results << competitor_result
-
-    - qualification_results.sort_by! { |x| x[:best_result] || 999 }
 
     .row.top-buffer
       .col-sm-12
         %h2.light-header= 'Qualification'
     .row
-      %table.table
+      %table.table.qualification-table
         %thead
           %tr
             %td
               Rank
             %td
               Competitor
-            - @tournament.qualification_rounds.each do |round|
-              %td= "Round #{round.order}"
             %td
               Best result
+            - @tournament.qualification_rounds.each do |round|
+              %td= "Round #{round.order}"
         %tbody
           - qualification_results.each_with_index do |result, index|
             %tr
               %td= index + 1
-              %td= result[:name]
-              - @tournament.qualification_rounds.each do |round|
-                %td= result["round_#{round.order}"]
+              %td
+                %a{href: user_profile_path(result[:user_profile_id])}
+                  = result[:name]
               %td= result[:best_result]
+              - @tournament.qualification_rounds.each do |round|
+                - round_result = result["round_#{round.order}"]
+                - track_id = result["round_#{round.order}_track_id"]
+                %td 
+                  - if track_id
+                    %a{href: track_path(track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
+                      = round_result
+                  - else
+                    = round_result
+
+- if can? :edit, @tournament
+  .container
+    %a.btn.btn-default{href: tournament_competitors_path}= 'Competitors'
+    %a.btn.btn-default{href: tournament_rounds_path}= 'Rounds'
+    %a.btn.btn-default{href: tournament_matches_path}= 'Matches'
+    %a.btn.btn-default{href: tournament_match_competitors_path}= 'Match competitors'
+
+
