fix tournament layout issues
border-bottom for link didn’t show in safari, spacers rendered after
bronze finals

--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -56,7 +56,7 @@
                     .col-sm-9.text-left.text-muted
                       ?
                     .col-sm-3.text-right
-          - unless match.gold_finals
+          - unless match.gold_finals || match.bronze_finals
             - spacers.times do
               .tournament-spacer
 
