Displaying place with country.

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -83,3 +83,7 @@ input[readonly] {
   background-color: white !important;
   cursor: text !important;
 }
+
+.no-right-space {
+  margin-right: -5px;
+}
