--- a/app/views/tracks/_header.html.haml
+++ b/app/views/tracks/_header.html.haml
@@ -14,14 +14,17 @@
           - if track.wingsuit
             - manufacturer = track.wingsuit.manufacturer
             %a{href: wingsuit_path(track.wingsuit)}
-              %span.text-warning{data: {toggle: 'tooltip'}, title: manufacturer.name}= manufacturer.code || ''
-              %span= ' ' + track.wingsuit.name
+              = suit_presentation(track.wingsuit)
           - else
             %span= track.suit
+          %span.no-right-space
+            @
           - if track.place
-            %a{href: place_path(track.place)}= "@#{track.place.name}"
+            %a{href: place_path(track.place)}
+              %span
+              = place_presentation(track.place)
           - else
-            %span= "@#{track.location}"
+            %span= track.location
 
   .row
     .col-md-12
