--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -59,10 +59,12 @@
             %tr{data: {toggle: 'collapse', target: "#all_results_#{result[:pilot_id]}"}}
               -#.clickableRow{data: {url: track_path(id: best_result.track_id)}}
               %td= index + 1
-              %td= best_result.user_profile.name.titleize
+              %td
+                %a{href: user_profile_path(best_result.user_profile_id), data: {toggle: 'tooltip'}, title: t('.show_profile')}
+                  = best_result.user_profile.name.titleize
               %td= suit_presentation(best_result.wingsuit)
               %td.text-right
-                %a.text-info{href: track_path(best_result.track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
+                %a{href: track_path(best_result.track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
                   = format_result(best_result.result, @competition)
               - if @competition.display_highest_speed
                 %td.text-right= (best_result.highest_speed || 0.0).round(1)
