--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -75,6 +75,8 @@
                           %span.vc-result= format_result(result.result, result.virtual_competition)
                           %span.vc-unit= competition_unit(result.virtual_competition)
 
+= render partial: 'tracks/new_track'
+
 -# .container.top-buffer
 -#   .row
 -#     .col-sm-12
