--- a/app/views/wingsuits/index.html.haml
+++ b/app/views/wingsuits/index.html.haml
@@ -5,24 +5,64 @@
   - if can? :create, :wingsuit
     = link_to 'New', new_wingsuit_path, class: 'btn btn-default'
   
-  .top-buffer
-    %table.table.table-hover
-      %tbody
-        - @wingsuits.each do |manufacturer, wingsuits|
-          %tr.bg-warning.text-danger.no-hover
-            %td{colspan: 2}= manufacturer ? manufacturer.name : '<...>'
-          - wingsuits.each do |wingsuit|
-            %tr.clickableRow{data: {url: wingsuit_path(id: wingsuit.id)}}
-              %td.text-info= wingsuit.name
-              %td
-                - if can? :update, wingsuit
-                  = link_to t('.edit', default: t("helpers.links.edit")),
-                                edit_wingsuit_path(wingsuit), class: 'btn btn-default btn-xs'
-                  = link_to t('.destroy', default: t("helpers.links.destroy")),
-                                wingsuit_path(wingsuit),
-                                method: :delete,
-                                data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) },
-                                class: 'btn btn-xs btn-danger'
+  - @wingsuits.each do |manufacturer, suits|
+    .top-buffer
+      .row
+        .col-sm-12.col-md-12
+          %h1.light-header= manufacturer ? manufacturer.name : '<...>'
+        .col-sm-12.col-md-6
+          %h2.light-header Wingsuits
+          %ul.suits-list
+            - suits.select(&:wingsuit?).each do |wingsuit|
+              %li.suit-li
+                .row
+                  .col-sm-6
+                    %a{href: wingsuit_path(wingsuit)}= wingsuit.name
+                  .col-sm-2.text-muted
+                    .text-center
+                      = wingsuit.pilots.group_by(&:id).count
+                    .text-center
+                      pilots
+                  .col-sm-2.text-muted
+                    .text-center
+                      = wingsuit.tracks.base.count
+                    .text-center
+                      base
+                  .col-sm-2.text-muted
+                    .text-center
+                      = wingsuit.tracks.skydive.count
+                    .text-center
+                      skydive
+              -# - if can? :update, wingsuit
+              -#   = link_to t('.edit', default: t("helpers.links.edit")),
+              -#                 edit_wingsuit_path(wingsuit), class: 'btn btn-default btn-xs'
+              -#   = link_to t('.destroy', default: t("helpers.links.destroy")),
+              -#                 wingsuit_path(wingsuit),
+              -#                 method: :delete,
+              -#                 data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) },
+              -#                 class: 'btn btn-xs btn-danger'
+        .col-sm-12.col-md-6
+          %h2.light-header Tracksuits
+          %ul.suits-list
+            - suits.select(&:tracksuit?).each do |tracksuit|
+              %li.suit-li
+                .row
+                  .col-sm-6
+                    %a{href: wingsuit_path(tracksuit)}= tracksuit.name
+                  .col-sm-2.text-muted
+                    .text-center
+                      = tracksuit.pilots.group_by(&:id).count
+                    .text-center
+                      pilots
+                  .col-sm-2.text-muted
+                    .text-center
+                      = tracksuit.tracks.base.count
+                    .text-center
+                      base
+                  .col-sm-2.text-muted
+                    .text-center
+                      = tracksuit.tracks.skydive.count
+                    .text-center
+                      skydive
 
-
-
+    %hr
