showing only public tracks

--- a/app/views/wingsuits/index.html.haml
+++ b/app/views/wingsuits/index.html.haml
@@ -25,12 +25,12 @@
                       pilots
                   .col-sm-2.text-muted
                     .text-center
-                      = wingsuit.tracks.base.count
+                      = wingsuit.tracks.public_track.base.count
                     .text-center
                       base
                   .col-sm-2.text-muted
                     .text-center
-                      = wingsuit.tracks.skydive.count
+                      = wingsuit.tracks.public_track.skydive.count
                     .text-center
                       skydive
               -# - if can? :update, wingsuit
@@ -56,12 +56,12 @@
                       pilots
                   .col-sm-2.text-muted
                     .text-center
-                      = tracksuit.tracks.base.count
+                      = tracksuit.tracks.public_track.base.count
                     .text-center
                       base
                   .col-sm-2.text-muted
                     .text-center
-                      = tracksuit.tracks.skydive.count
+                      = tracksuit.tracks.public_track.skydive.count
                     .text-center
                       skydive
 
